k8s_envs/dev/common/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hms-routes
  namespace: hms-dev
spec:
  parentRefs:
  - name: hms-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/auth
    backendRefs:
    - name: auth-service
      port: 5000
  - matches:
    - path:
        type: PathPrefix
        value: /api/users
    backendRefs:
    - name: user-service
      port: 5001
  - matches:
    - path:
        type: PathPrefix
        value: /api/appointments
    backendRefs:
    - name: appointment-service
      port: 5002
  - matches:
    - path:
        type: PathPrefix
        value: /api/notifications
    backendRefs:
    - name: notification-service
      port: 5004
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      port: 3000
